--- a/hashes/Cargo.toml
+++ b/hashes/Cargo.toml
@@ -35,9 +35,5 @@ serde_test = "1.0.19"
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
-[lints.rust]
-unexpected_cfgs = { level = "deny", check-cfg = ['cfg(hashes_fuzz)'] }
-
-[lints.clippy]
-redundant_clone = "warn"
-use_self = "warn"
+[lints]
+workspace = true
