--- a/base58/Cargo.toml
+++ b/base58/Cargo.toml
@@ -22,7 +22,7 @@ hashes = { package = "bitcoin_hashes", path = "../hashes", version = "0.19.0", d
 internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }
 
 [dev-dependencies]
-hex_lit = "0.1.1"
+hex = { package = "hex-conservative", version = "0.3.2" }
 
 [package.metadata.docs.rs]
 all-features = true
